stop chart from disappearing on small viewports

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -78,3 +78,6 @@
 }
 */
 header .mx-auto > div.flex { align-items: center;}
+header#header div div div.mt-12.mx-auto.hidden {
+display:inherit;
+}
